# wish

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  index.html  sw.js  todo.txt
.github/workflows/: deploy.yml  release.yml
archives/: lib.rs
archives/iced/src/: index.rs
backend/: Cargo.toml
backend/src/: lib.rs  simulation.rs
frontend/: Cargo.toml
frontend/src/: index.rs  main.rs
notebooks/: test.ipynb
pkg/: wish.d.ts  wish.js  wish_bg.wasm  wish_bg.wasm.d.ts
src/: constant.rs  index.rs  lib.rs  main.rs  simulation.rs
