[package]
name = "wish"
version = "0.1.0"
edition = "2021"

[dependencies]
backend = { path = "./backend" }
eframe = { version = "0.29.1", features = ["wgpu", "ron", "serde"] }
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
image = "0.25"
getrandom = "0.2"
resvg = "0.44"
tiny-skia = "0.11"
usvg = "0.44"
log = "0.4.22"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.5"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui-wgpu = "0.29.1"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
web-sys = "0.3.72"
wasm-bindgen-futures = "0.4"

[build-dependencies]
winresource = "0.1.17"

[profile.release]
opt-level = "z"
