[package]
name = "wish"
version = "1.0.4"
edition = "2021"

[dependencies]
backend = { path = "./backend" }
eframe = "0.28.1"
egui_extras = { version = "0.28.1", features = ["all_loaders"] }
env_logger = "0.11.5"
image = "0.25.2"
resvg = "0.43.0"
tiny-skia = "0.11.4"
usvg = "0.43.0"

[build-dependencies]
winresource = "0.1.17"

[profile.release]
opt-level = "z"
